--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
 
 android {
     compileSdk 31
-    compileSdkVersion "android-S"
 
     buildFeatures {
         compose true
@@ -45,7 +44,10 @@ dependencies {
     def composeNavigation = "2.4.0-beta02"
     def composePaging = "1.0.0-alpha14"
 
-    implementation "androidx.compose.ui:ui-tooling:1.0.5"
+    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'com.google.android.material:material:1.4.0'
+
     implementation "androidx.compose.ui:ui:${compose}"
     implementation "androidx.compose.ui:ui-tooling:${compose}"
     implementation "androidx.compose.ui:ui-graphics:${compose}"
@@ -57,9 +59,6 @@ dependencies {
     implementation "androidx.paging:paging-compose:${composePaging}"
 
     implementation 'androidx.core:core-splashscreen:1.0.0-alpha02'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+
     testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
